src/test/ui/never-assign-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/never-assign-wrong-type.rs:7:16
   |
LL |     let x: ! = "hello";
   |                ^^^^^^^ expected !, found reference
   |
   = note: expected type `!`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
